--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,58 @@
 html, body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   font-family: 'Lato', 'sans serif';
+  color: #01183d;
+}
+
+#navbar {
+  display: flex;
+  box-shadow: 2px 2px 2px #c6cad2;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 24px;
+}
+
+#title {
+  margin-right: auto;
+}
+
+#home-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#main-img {
+  width: 125px;
+  height: 125px;
+  margin: 50px;
+}
+
+.large {
+  font-size: 60px;
+}
+
+a {
+  font-weight: bold;
+  font-family: 'Lato';
+  text-decoration: none;
+}
+
+a:visited {
+  color: #01183d;
+}
+
+button {
+  padding: 16px 24px;
+  margin: 8px;
+  border-radius: 8px;
+  border: solid 0 #F57F17;
+  background-color: #F57F17;
+  color: #ffffff;
+  font-size: 16px;
 }
