--- a/public/style.css
+++ b/public/style.css
@@ -56,3 +56,57 @@ button {
   color: #ffffff;
   font-size: 16px;
 }
+
+#session-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#session-form {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  background-color: #01183d;
+  padding: 40px;
+  border-radius: 8px;
+  color: #fff;
+}
+
+.form-label {
+  width: 100%;
+  padding: 10px 0;
+}
+
+.form-submit {
+  width: 100%;
+  padding: 16px 24px;
+  margin: 8px;
+  border-radius: 8px;
+  border: solid 0 #F57F17;
+  background-color: #F57F17;
+  color: #ffffff;
+  font-size: 16px;
+}
+
+.form-input {
+  width: 100%;
+  font-size: 18px;
+  margin: 10px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f7f7f7;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.button-container {
+  margin: 10px 0 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
