--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,11 @@ html, body {
   padding: 0 24px;
 }
 
+.center {
+  text-align: center;
+  margin: 30px 0;
+}
+
 #title {
   margin-right: auto;
 }
@@ -57,6 +62,16 @@ button {
   font-size: 16px;
 }
 
+button:hover, input[type='submit']:hover {
+  cursor: pointer;
+}
+
+.small {
+  padding: 8px 12px;
+  margin: 4px;
+  font-size: 12px;
+}
+
 #session-container {
   display: flex;
   justify-content: center;
@@ -73,6 +88,42 @@ button {
   padding: 40px;
   border-radius: 8px;
   color: #fff;
+}
+
+#link-form {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-items: center;
+  background-color: #01183d;
+  padding: 10px;
+  color: #fff;
+}
+
+#link-form-submit {
+  padding: 8px 12px;
+  margin: 8px;
+  border-radius: 4px;
+  border: solid 0 #F57F17;
+  background-color: #F57F17;
+  color: #ffffff;
+  font-size: 16px;
+}
+
+#link-form-input {
+  font-size: 12px;
+  /*margin: 6px 0;*/
+  width: 90%;
+  margin-right: auto;
+  /*display: inline-block;*/
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f7f7f7;
+  /*box-sizing: border-box;*/
+  padding: 10px;
+}
+
+#link-form-label {
 }
 
 .form-label {
