--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,53 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-family: 'Lato', 'sans serif';
   color: #01183d;
+}
+
+.main-text {
+  color: #01183d;
+}
+
+.main {
+  background-color: #F57F17;
+  color: white;
+}
+
+.secondary {
+  background-color: white;
+  color: #01183d;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.section {
+  width: 100%;
+  padding: 50px;
+  margin: 0;
+}
+
+.col {
+  flex: 1 0 25%;
+  overflow-wrap: break-word;
+  box-sizing: border-box;
+  margin: 25px;
+  padding: 25px 0;
+  border-radius: 8px;
+}
+
+.half {
+  width: 50%;
+}
+
+.third {
+  width: 33%;
 }
 
 #navbar {
@@ -20,22 +64,17 @@ html, body {
   display: inline;
 }
 
-.center {
-  text-align: center;
-  margin: 30px 0;
-}
-
 #title {
   margin-right: auto;
 }
 
-#home-header {
+.center {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
-  margin-bottom: 25px;
+  margin: 0 0 30px 0;
 }
 
 #main-img {
@@ -118,18 +157,12 @@ button:hover, input[type='submit']:hover {
 
 #link-form-input {
   font-size: 12px;
-  /*margin: 6px 0;*/
   width: 90%;
   margin-right: auto;
-  /*display: inline-block;*/
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #f7f7f7;
-  /*box-sizing: border-box;*/
   padding: 10px;
-}
-
-#link-form-label {
 }
 
 .form-label {
